--- a/style.css
+++ b/style.css
@@ -8,10 +8,9 @@ body {
     display: grid;
     grid-template-columns: 1fr;
     width: 327px;
-    height: 566px;
+    height: auto;
     gap: 40px;
-    opacity: 0px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .titulo {
@@ -44,7 +43,7 @@ h1 {
     height: 184px;
     gap: 32px;
 
-    border: 1px solid yellowgreen;
+    /* border: 1px solid yellowgreen; */
 }
 
 .form_inputs {
@@ -52,5 +51,46 @@ h1 {
     grid-template-columns: 1fr;
     height: 76px;
     gap: 12px;
-    border: 1px solid gray;
+    /* border: 1px solid gray; */
+}
+
+label {
+    font-family: "Archivo";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 15.23px;
+}
+
+.input_text {
+    width: 100%;
+    height: 49px;
+    padding: 16px;
+    gap: 8px;
+    border-radius: 4px;
+    border: 1px solid #E8E8E8;
+    background: #F7FAFC;
+}
+
+::placeholder {
+  font-family: "Archivo";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 17.41px;
+  text-align: left;
+}
+
+.link {
+  display: flex;
+  width: 100%;
+  height: 16px;
+  justify-content: space-between;
+}
+
+.link_ajuda_senha {
+  font-family: "Archivo";
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 15.23px;
+  text-align: right;
+  color: #1E9E6A;
 }
