--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ h1 {
     grid-template-columns: 1fr;
     width: 100%;
     height: 184px;
-    gap: 32px;
+    gap: 24px;
 
     /* border: 1px solid yellowgreen; */
 }
@@ -93,4 +93,67 @@ label {
   line-height: 15.23px;
   text-align: right;
   color: #1E9E6A;
+  text-decoration: none;
+}
+
+.botoes{
+    border: 1px solid maroon;
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    gap: 15px;
+}
+
+#botao_conta {
+    width: 100%;
+    height: 52px;
+    padding: 16px 32px;
+    border-radius: 4px;
+
+    font-family: "Archivo";
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 19.58px;
+    background: #1E9E6A;
+    border: #1E9E6A;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+/* .faca_login{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 52px;
+    padding: 14px 32px;
+    border-radius: 4px;
+    background: #1A202C;
+    gap: 15px;
+    cursor: pointer;
+} */
+
+img{
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    margin-top: 10px;
+    margin-left: 20px;
+}
+
+#login {
+    font-family: "Archivo";
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 19.58px;
+    text-align: left;
+    background: #1A202C;
+
+    justify-content: center;
+    width: 100%;
+    height: 52px;
+    padding: 14px 32px;
+    border-radius: 4px;
+    background: #1A202C;
+    gap: 15px;
+    cursor: pointer;
 }
