--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
     grid-template-columns: 1fr;
     width: 327px;
     height: auto;
-    gap: 40px;
-    /* border: 1px solid black; */
+    gap: 64px;
+    border: 1px solid black;
 }
 
 .titulo {
@@ -72,44 +72,60 @@ label {
 }
 
 ::placeholder {
-  font-family: "Archivo";
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 17.41px;
-  text-align: left;
+    font-family: "Archivo";
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 17.41px;
+    text-align: left;
 }
 
 .link {
-  display: flex;
-  width: 100%;
-  height: 16px;
-  justify-content: space-between;
+    display: flex;
+    width: 100%;
+    height: 16px;
+    justify-content: space-between;
+}
+
+.form_radio {
+    display: flex;
+    gap: 8px;
+}
+
+.Lembre {
+    font-family: "Archivo";
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 15.23px;
+    text-align: left;
+
 }
 
 .link_ajuda_senha {
-  font-family: "Archivo";
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 15.23px;
-  text-align: right;
-  color: #1E9E6A;
-  text-decoration: none;
+    font-family: "Archivo";
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 15.23px;
+    text-align: right;
+    color: #1E9E6A;
+    text-decoration: none;
 }
 
-.botoes{
+.botoes {
     border: 1px solid maroon;
     display: flex;
     flex-direction: column;
     height: auto;
-    gap: 15px;
+    gap: 24px;
+    margin-top: 30px;
 }
 
 #botao_conta {
+    display: flex;
     width: 100%;
-    height: 52px;
+    height: 45px;
     padding: 16px 32px;
     border-radius: 4px;
-
+    justify-content: center;
     font-family: "Archivo";
     font-size: 18px;
     font-weight: 600;
@@ -120,40 +136,42 @@ label {
     cursor: pointer;
 }
 
-/* .faca_login{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 52px;
-    padding: 14px 32px;
-    border-radius: 4px;
-    background: #1A202C;
-    gap: 15px;
-    cursor: pointer;
-} */
-
-img{
-    width: 24px;
-    height: 24px;
-    position: absolute;
-    margin-top: 10px;
-    margin-left: 20px;
+img {
+    width: 16px;
+    height: 16px;
 }
 
 #login {
-    font-family: "Archivo";
-    font-size: 18px;
-    font-weight: 600;
-    line-height: 19.58px;
-    text-align: left;
-    background: #1A202C;
-
-    justify-content: center;
+    display: flex;
     width: 100%;
-    height: 52px;
+    height: 45px;
     padding: 14px 32px;
+    gap: 12px;
     border-radius: 4px;
     background: #1A202C;
-    gap: 15px;
+    align-items: center;
+    border-radius: 4px;
     cursor: pointer;
+}
+
+.text_login {
+    font-family: "Archivo";
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 17.41px;
+    color: #FFFFFF;
+}
+
+.caixa_cadastre {
+    font-family: "Archivo";
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 17.41px;
+    text-align: center;
+}
+
+#link_cadastrese{
+    color: #1E9E6A;
+    cursor: pointer;
+    text-decoration: none;
 }
